--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,43 @@
 asgiref==3.8.1
 astmonkey==0.3.6
-Django==4.2.21
+boolean.py==5.0
+CacheControl==0.14.3
+certifi==2025.10.5
+charset-normalizer==3.4.4
+cyclonedx-python-lib==9.1.0
+defusedxml==0.7.1
+Django==4.2.26
 django-cors-headers==4.6.0
 django-filter==24.3
 djangorestframework==3.15.2
-djangorestframework-simplejwt==5.2.2
+djangorestframework_simplejwt==5.5.1
 drf-yasg==1.21.8
 exceptiongroup==1.3.0
+filelock==3.20.0
 gitdb==4.0.12
 GitPython==3.1.41
+idna==3.11
 importlib_metadata==8.7.0
 inflection==0.5.1
 iniconfig==2.1.0
 Jinja2==3.1.6
+license-expression==30.4.4
 Markdown==3.7
+markdown-it-py==4.0.0
 MarkupSafe==3.0.3
+mdurl==0.1.2
+msgpack==1.1.2
 MutPy==0.6.1
+packageurl-python==0.17.5
 packaging==24.2
 pillow==11.0.0
+pip-api==0.0.34
+pip-requirements-parser==32.0.1
+pip_audit==2.9.0
+platformdirs==4.5.0
 pluggy==1.6.0
 psycopg2-binary==2.9.10
+py-serializable==2.1.0
 pydot==4.0.1
 Pygments==2.19.2
 PyJWT==2.10.1
@@ -28,10 +46,15 @@ pytest==8.4.1
 pytest-django==4.11.1
 pytz==2024.2
 PyYAML==6.0.2
+requests==2.32.5
+rich==14.2.0
 smmap==5.0.2
+sortedcontainers==2.4.0
 sqlparse==0.5.2
 termcolor==3.1.0
+toml==0.10.2
 tomli==2.2.1
 typing_extensions==4.15.0
 uritemplate==4.1.1
+urllib3==2.5.0
 zipp==3.23.0
